# jazz_create-serverless-service/swagger/swagger.json
@@ -247,7 +247,7 @@
                     "description": "The type of the service being developed (API/Microservice/Website)",
                     "enum": [
                         "api",
-                        "lambda",
+                        "function",
                         "website"
                     ]
                 },
@@ -285,6 +285,24 @@
 				"require_internal_access": {
                     "type": "boolean",
                     "description":"Does service require access to internal SLF network and resources"
+                },
+                "deployment_targets": {
+                    "type": "object",
+                    "description": "Deployment targets list for the service",
+                    "properties": {
+                        "api": {
+                            "type": "string",
+                            "enum": ["aws_apigateway", "gcp_apigee"]
+                        },
+                        "function": {
+                            "type": "string",
+                            "enum": ["aws_lambda", "gcp_knative"]
+                        },
+                        "website": {
+                            "type": "string",
+                            "enum": ["aws_s3", "aws_cloudfront"]
+                        }
+                    }
                 }
             }
         }
